--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,18 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Base To Do{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     {% block stylesheets %}
-{#        <link rel="stylesheet" href="{{ asset('build/app.css') }}">#}
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        {#        <link rel="stylesheet" href="{{ asset('build/app.css') }}"> #}
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+              integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+              crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+              crossorigin="anonymous">
         {{ encore_entry_link_tags('app') }}
-
-
     {% endblock %}
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
+
+        <script>
+            $(function () {
+                $('.form-check-input').click(function () {
+                    var taskId = $(this).data('my-task-id');
+                    var url = "{{ path('switch_status', {'id': '__TASK_ID__'}) }}".replace('__TASK_ID__', taskId);
+
+                    $.post(url);
+                });
+            });
+        </script>
+
     {% endblock %}
 </head>
 <body>
