--- a/templates/to_do/index.html.twig
+++ b/templates/to_do/index.html.twig
@@ -24,19 +24,30 @@
                             </form>
 
                             <ul class="list-group mb-0">
-                                {% for task in all_tasks %}
 
+                                {% for task in all_tasks %}
                                     <li
                                             class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                                        <div class="d-flex align-items-center">
-                                            {{ task.title }}
+
+                                        {#                                        <div class="form-check form-switch"> #}
+                                        {#                                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheck" {% if task.status %} checked {% endif %}> #}
+                                        {#                                            <label class="form-check-label" for="flexSwitchCheck">{{ task.title }}</label> #}
+                                        {#                                        </div> #}
+
+
+                                        <div class="form-check form-switch">
+                                            <input class="form-check-input" type="checkbox" role="switch"
+                                                   id="flexSwitchCheck{{ task.id }}" {% if task.status %} checked {% endif %}
+                                                   data-my-task-id="{{ task.id }}">
+                                            <label class="form-check-label"
+                                                   for="flexSwitchCheck">{{ task.title }}</label>
                                         </div>
+
                                         <a href="{{ path('delete_task', {'id':task.id}) }}" data-mdb-toggle="tooltip"
                                            title="Remove item">
                                             <i class="fas fa-times text-primary"></i>
                                         </a>
                                     </li>
-
                                 {% endfor %}
 
                             </ul>
