--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,13 @@
                     $.post(url);
                 });
             });
+
+            fetch('/quote')
+                .then(response => response.text())
+                .then(data => {
+                    document.querySelector('#quote').innerHTML = data;
+                });
+
         </script>
 
     {% endblock %}
