--- a/templates/to_do/index.html.twig
+++ b/templates/to_do/index.html.twig
@@ -3,11 +3,22 @@
 {% block title %}To Do{% endblock %}
 
 {% block body %}
-    <section class="vh-100">
-        <div class="container py-5 h-100">
+
+    <div class="container mt-4">
+        <div class="card">
+            <div class="card-body">
+                <h6 class="card-title">Quote of the Day</h6>
+                <blockquote class="blockquote mb-0">
+                    <p id="quote" class="card-text" style="font-size: smaller; font-style: italic;"></p>
+                </blockquote>
+            </div>
+        </div>
+    </div>
+
+    <section class="vh-30">
+        <div class="container py-3 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
-
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
 
