--- a/templates/to_do/index.html.twig
+++ b/templates/to_do/index.html.twig
@@ -4,19 +4,38 @@
 
 {% block body %}
 
-    <div class="container mt-4">
-        <div class="card">
-            <div class="card-body">
-                <h6 class="card-title">Quote of the Day</h6>
-                <blockquote class="blockquote mb-0">
-                    <p id="quote" class="card-text" style="font-size: smaller; font-style: italic;"></p>
-                </blockquote>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="container mt-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="card-title">Quote of the Day</h6>
+                        <blockquote class="blockquote mb-0">
+                            <p id="quote" class="card-text" style="font-size: smaller; font-style: italic;"></p>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="position-relative">
+                <div class="position-absolute top-0 end-0 container mt-4 card-sm" style="padding-right: 10px;">
+                    <div class="card">
+                        <div class="card-body">
+                            <h6 class="card-title mb-1">Weather in {{ weather.name }}</h6>
+                            <p class="card-text mb-0" style="font-size: smaller">{{ weather.main.temp }}°C</p>
+                            <p class="card-text mb-0"
+                               style="font-size: smaller; font-style: italic">{{ weather.weather[0].description }}</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
+
     <section class="vh-30">
-        <div class="container py-3 h-100">
+        <div class="py-3 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 15px;">
@@ -25,7 +44,7 @@
                             <h6 class="mb-3">My to-do list</h6>
 
                             <form action="{{ path('create_task') }}" method="POST"
-                                  class="d-flex justify-content-center align-items-center mb-4">
+                                  class="d-flex justify-content-center align-items-center my-4">
                                 <div class="form-outline flex-fill">
                                     <label class="form-label" for="form3">Let's add a new task</label>
                                     <textarea type="text" id="form3" class="form-control form-control-lg"
@@ -35,17 +54,8 @@
                             </form>
 
                             <ul class="list-group mb-0">
-
                                 {% for task in all_tasks %}
-                                    <li
-                                            class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-
-                                        {#                                        <div class="form-check form-switch"> #}
-                                        {#                                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheck" {% if task.status %} checked {% endif %}> #}
-                                        {#                                            <label class="form-check-label" for="flexSwitchCheck">{{ task.title }}</label> #}
-                                        {#                                        </div> #}
-
-
+                                    <li class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
                                         <div class="form-check form-switch">
                                             <input class="form-check-input" type="checkbox" role="switch"
                                                    id="flexSwitchCheck{{ task.id }}" {% if task.status %} checked {% endif %}
@@ -53,7 +63,6 @@
                                             <label class="form-check-label"
                                                    for="flexSwitchCheck">{{ task.title }}</label>
                                         </div>
-
                                         <a href="{{ path('delete_task', {'id':task.id}) }}" data-mdb-toggle="tooltip"
                                            title="Remove item">
                                             <i class="fas fa-times text-primary"></i>
